<resources>
    <string name="app_name">LoaderApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_rb_txt">Glide - Image Loading Library</string>
    <string name="load_app_rb_txt">Load App - Current Repository</string>
    <string name="retrofit_rb_txt">Retrofit - Type-safe HTTP client</string>
    <string name="header_image_cd">Header Image of download repository activity</string>
    <string name="file_notification_channel_id">File Channel</string>
    <string name="file_notification_channel_name">Github Repo</string>
    <string name="explore">Explore</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>

</resources>