<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/download_cloud_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="100dp"
        android:contentDescription="@string/header_image_cd"
        />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        android:layout_marginVertical="10dp"
        >

        <RadioButton
            android:id="@+id/glide_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/glide_rb_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:onClick="onRadioBtnChecked"/>

        <RadioButton
            android:id="@+id/load_app_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:minHeight="48dp"
            android:text="@string/load_app_rb_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onRadioBtnChecked"/>

        <RadioButton
            android:id="@+id/retrofit_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:minHeight="48dp"
            android:text="@string/retrofit_rb_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onRadioBtnChecked"/>
    </RadioGroup>

    <com.mostafa.udacity.myapplication.utils.view.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>